--- a/3/index.html
+++ b/3/index.html
@@ -1,8 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-	
-</body>
+    <body>
+    <header>
+        <nav>
+            <ul>
+                <li>About</li>
+                 <li>Shop</li>
+                  <li>Our stores</li>
+            </ul>
+        </nav>
+        <hr>
+        <h1><center>Scottish Cashmere</center></h1>
+    </header>
+    
+    <main>
+        <article>
+            <header> <h6> <center>The Story of Brora Scottish Cashmere</center> </h6>
+            </header>
+            <section>
+                <h1>Why cashmere?</h1>
+                <p> A short glimpse into the world of Brora Scottish cashmere.</p>
+                <p id="link"> ../3/index.html</p>
+                    <img alt="Why cashmere?" width = "200" height = "200" src="imageSmall.png">
+                    <img alt="Why cashmere?" width = "200" height = "200" src="images-4.jpeg">
+                    <img alt="Why cashmere?" width = "200" height = "200" src="images-5.jpeg">
+                    <img alt="Why cashmere?" width = "200" height = "200" src="Brora_ES_landscape hero.jpg">
+                <p> Qualities of cashmere: warm, soft, lightweight</p>
+            </section>
+            <footer>
+                <nav>
+                    <ul>
+                        <li>Instagram</li>
+                        <li>Facebook</li>
+                        <li>Impressum</li>
+                    </ul>
+                </nav>
+            </footer>
+        </article>
+        <article>
+            <a href="index.html">Back to landing page</a>
+        </article>
+    </main>
+    </body>
 </html>
